--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Resume Builder</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+  <title>☻ Resume Builder ☻</title>
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- AOS CSS -->
@@ -113,15 +113,15 @@
                       placeholder="List job responsibilities or achievements"></textarea>
           </div>
 
-          <hr><h4>Skills</h4>
+          <hr><h4> ♥ Skills ♥</h4>
           <div class="mb-3">
             <label for="skillsInput" class="form-label">Skills (comma separated)</label>
             <input type="text" id="skillsInput" class="form-control" placeholder="e.g. JavaScript, HTML, CSS" required>
             <div class="invalid-feedback">List at least one skill.</div>
           </div>
 
-          <hr><h4>Education</h4>
           <div class="mb-3">
+          <hr><h4> Education ☻</h4>
             <label for="educationInput" class="form-label">Degree and University</label>
             <input type="text" id="educationInput" class="form-control"
                    placeholder="e.g. B.Sc. in CS - University (2016-2020)" required>
@@ -162,9 +162,9 @@
                 <span id="jobCompany">Company</span> - <span id="jobDates">Dates</span>
               </p>
               <ul id="jobResponsibilities">
-                <li>List your responsibilities or achievements here.</li>
               </ul>
             </div>
+                <li> ☻ List your responsibilities or achievements here ☻.</li>
           </section>
           <!-- Skills Section -->
           <section data-aos="fade-up" class="mt-4">
